fixing dropdown list overflow

--- a/app/assets/stylesheets/components/_favorite_card.scss
+++ b/app/assets/stylesheets/components/_favorite_card.scss
@@ -10,7 +10,7 @@
   position: relative;
   box-shadow: 0 1px 4px rgba($deep-navy, 0.08);
   width: 100%;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .favorite-card-category .favorite-priority-span, .favorite-card-category .fa-heart {
